--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Thu Jul 15 20:31:28 2004  Matthias Clasen  <maclas@gmx.de>
+
+	* gtk/gtkspinbutton.c (start_spinning): Install the timeout
+	before changing the value, so that a ::value_changed handler
+	has a chance to remove it.  (#122427, Elke Meier)
+
 2004-07-15  Matthias Clasen  <mclasen@redhat.com>
 
 	* gtk/gtkmenu.c (gtk_menu_set_tearoff_state): Don't reparent
