--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-07-18  Pauli Virtanen  <pauli.virtanen@hut.fi>
+
+	* fi.po: Updated Finnish translation.
+
 2004-07-17  Alessio Frusciante  <algol@firenze.linux.it>
 
 	* it.po: Updated Italian translation by
