--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-07-18  Vincent van Adrighem  <adrighem@gnome.org>
+
+	* nl.po: Translation updated by Tino Meinen.
+
 2004-07-18  Pauli Virtanen  <pauli.virtanen@hut.fi>
 
 	* fi.po: Updated Finnish translation.
