--- a/contrib/gdk-pixbuf-xlib/ChangeLog
+++ b/contrib/gdk-pixbuf-xlib/ChangeLog
@@ -1,3 +1,7 @@
+Tue Jul 20 23:27:12 2004  Matthias Clasen  <maclas@gmx.de>
+
+	* gdk-pixbuf-xlibrgb.c: Include config.h first.  (#148034)
+
 Tue Mar  9 09:33:54 2004  Owen Taylor  <otaylor@redhat.com>
 
 	* === Released 2.3.6 ===
