--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-09-27  Roozbeh Pournader  <roozbeh@farsiweb.info>
+
+	* configure.in: Added Iranian Azerbaijani (az_IR) to ALL_LINUGAS.
+
 2004-09-26  Matthias Clasen  <mclasen@redhat.com>
 
 	* gtk/gtknotebook.c (gtk_notebook_class_init): Add a missing _
