--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-10-01  Tor Lillqvist  <tml@iki.fi>
+
+	* gdk/win32/gdkglobals-win32.c: Enable wintab (tablets) by
+	default.
+
 2004-10-01  Matthias Clasen  <mclasen@redhat.com>
 
 	* gtk/gtkcombobox.c (gtk_combo_box_set_model): Add a comment regarding
