--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-10-03  Jesus Bravo Alvarez  <suso@trasno.net>
+
+	* gl.po: Updated Galician translation.
+
 2004-09-27  Roozbeh Pournader  <roozbeh@farsiweb.info>
 
 	* az_IR.po: Added Iranian Azerbaijani translation by Amir Hedayaty
