--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2005-01-21  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* nb.po: Update
+	* nn.po: Update some.
+
 2005-01-20  Miloslav Trmac  <mitr@volny.cz>
 
 	* cs.po: Updated Czech translation.
