--- a/po/nn.po
+++ b/po/nn.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: nn\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-01-08 02:01-0500\n"
-"PO-Revision-Date: 2004-03-21 21:36+0100\n"
+"PO-Revision-Date: 2005-01-21 12:45+0100\n"
 "Last-Translator: Åsmund Skjæveland\n"
 "Language-Team: Norwegian Nynorsk <i18n-nn@lister.ping.uio.no>\n"
 "MIME-Version: 1.0\n"
@@ -219,9 +219,8 @@ msgid "Stack overflow"
 msgstr "Stabeloverflyt"
 
 #: gdk-pixbuf/io-gif.c:635
-#, fuzzy
 msgid "GIF image loader cannot understand this image."
-msgstr "GIF-biletelastaren skjønar ikkje dette biletet"
+msgstr "GIF-biletelastaren skjønar ikkje dette biletet."
 
 #: gdk-pixbuf/io-gif.c:664
 msgid "Bad code encountered"
@@ -459,9 +458,9 @@ msgid "Keys for PNG text chunks must be ASCII characters."
 msgstr "Nøklane til PNG-tekstbitar må vera ASCII-teikn."
 
 #: gdk-pixbuf/io-png.c:854
-#, fuzzy, c-format
+#, c-format
 msgid "Value for PNG text chunk %s cannot be converted to ISO-8859-1 encoding."
-msgstr "Verdien til PNG-tekstbiten %s kan ikkje konverterast til ISO-8859-1."
+msgstr "Verdien til PNG-tekstbiten %s kan ikkje konverterast til ISO-8859-1-koding."
 
 #: gdk-pixbuf/io-png.c:994
 msgid "The PNG image format"
@@ -496,7 +495,6 @@ msgid "Maximum color value in PNM file is too large"
 msgstr "Største fargeverdi i PNM-fila er for stor"
 
 #: gdk-pixbuf/io-pnm.c:396
-#, fuzzy
 msgid "Cannot handle PNM files with maximum color values greater than 255"
 msgstr "Kan ikkje handsama PNM-filer med fargeverdiar større enn 255"
 
@@ -521,7 +519,6 @@ msgid "Raw PNM formats require exactly one whitespace before sample data"
 msgstr "Rå PNM-format krev nøyaktig eitt blankt teikn før datablokka"
 
 #: gdk-pixbuf/io-pnm.c:770
-#, fuzzy
 msgid "Cannot allocate memory for loading PNM image"
 msgstr "Kan ikkje setja av minne tll å lasta PNM-biletet"
 
@@ -562,37 +559,30 @@ msgid "The Sun raster image format"
 msgstr "Sun raster-bileteformat"
 
 #: gdk-pixbuf/io-tga.c:159
-#, fuzzy
 msgid "Cannot allocate memory for IOBuffer struct"
 msgstr "Kan ikkje setja av minne til IOBuffer-struktur"
 
 #: gdk-pixbuf/io-tga.c:178
-#, fuzzy
 msgid "Cannot allocate memory for IOBuffer data"
 msgstr "Kan ikkje setja av minne til IOBuffer-data"
 
 #: gdk-pixbuf/io-tga.c:189
-#, fuzzy
 msgid "Cannot realloc IOBuffer data"
 msgstr "Kan ikkje setja av minne på nytt (realloc) til IOBuffer-data"
 
 #: gdk-pixbuf/io-tga.c:219
-#, fuzzy
 msgid "Cannot allocate temporary IOBuffer data"
 msgstr "Kan ikkje setja av mellombels IOBuffer-data"
 
 #: gdk-pixbuf/io-tga.c:353
-#, fuzzy
 msgid "Cannot allocate new pixbuf"
 msgstr "Kan ikkje setja av nytt pixbuf"
 
 #: gdk-pixbuf/io-tga.c:692
-#, fuzzy
 msgid "Cannot allocate colormap structure"
 msgstr "Kan ikkje setja av minne til fargekart-struktur"
 
 #: gdk-pixbuf/io-tga.c:699
-#, fuzzy
 msgid "Cannot allocate colormap entries"
 msgstr "Kan ikkje setja av minne til fargekartoppføringar"
 
@@ -601,7 +591,6 @@ msgid "Unexpected bitdepth for colormap entries"
 msgstr "Uventa mange bits i fargekartoppføringar"
 
 #: gdk-pixbuf/io-tga.c:739
-#, fuzzy
 msgid "Cannot allocate TGA header memory"
 msgstr "Kan ikkje setja av minne til TGA-hovud"
 
@@ -615,7 +604,6 @@ msgid "TGA image type not supported"
 msgstr "TGA-biletetypen er ikkje støtta"
 
 #: gdk-pixbuf/io-tga.c:861
-#, fuzzy
 msgid "Cannot allocate memory for TGA context struct"
 msgstr "Kan ikkje setja av minne til TGA-kontekststruktur"
 
@@ -725,12 +713,10 @@ msgid "XPM file has invalid number of colors"
 msgstr "XPM-fila har ikkje gyldig tal fargar"
 
 #: gdk-pixbuf/io-xpm.c:1272 gdk-pixbuf/io-xpm.c:1281 gdk-pixbuf/io-xpm.c:1333
-#, fuzzy
 msgid "Cannot allocate memory for loading XPM image"
 msgstr "Kan ikkje setja av minne til å lasta XPM-bilete"
 
 #: gdk-pixbuf/io-xpm.c:1295
-#, fuzzy
 msgid "Cannot read XPM colormap"
 msgstr "Kan ikkje lesa XPM-fargekart"
 
@@ -750,7 +736,7 @@ msgstr ""
 #. Placeholder in --class=CLASS in --help output
 #: gdk/gdk.c:116
 msgid "CLASS"
-msgstr ""
+msgstr "KLASSE"
 
 #. Description of --name=NAME in --help output
 #: gdk/gdk.c:118
@@ -760,7 +746,7 @@ msgstr ""
 #. Placeholder in --name=NAME in --help output
 #: gdk/gdk.c:119
 msgid "NAME"
-msgstr ""
+msgstr "NAMN"
 
 #. Description of --display=DISPLAY in --help output
 #: gdk/gdk.c:121
@@ -794,7 +780,7 @@ msgstr ""
 #. Placeholder in --gtk-no-debug=FLAGS in --help output
 #: gdk/gdk.c:129 gdk/gdk.c:132 gtk/gtkmain.c:405 gtk/gtkmain.c:408
 msgid "FLAGS"
-msgstr ""
+msgstr "FLAGG"
 
 #. Description of --gdk-no-debug=FLAGS in --help output
 #: gdk/gdk.c:131
@@ -829,7 +815,7 @@ msgstr ""
 #. Placeholder in --max-colors=COLORS in --help output
 #: gdk/win32/gdkmain-win32.c:69
 msgid "COLORS"
-msgstr ""
+msgstr "FARGER"
 
 #. Description of --sync in --help output
 #: gdk/x11/gdkmain-x11.c:92
@@ -838,46 +824,46 @@ msgstr ""
 
 #: gtk/gtkaboutdialog.c:260 gtk/gtkaboutdialog.c:1939
 msgid "License"
-msgstr ""
+msgstr "Lisens"
 
 #: gtk/gtkaboutdialog.c:261
 msgid "The license of the program"
-msgstr ""
+msgstr "Lisensen til programmet"
 
 #. Add the credits button
 #: gtk/gtkaboutdialog.c:482
 msgid "_Credits"
-msgstr ""
+msgstr "_Bidrag"
 
 #. Add the license button
 #: gtk/gtkaboutdialog.c:491
 msgid "_License"
-msgstr ""
+msgstr "_Lisens"
 
 #: gtk/gtkaboutdialog.c:682
 #, c-format
 msgid "About %s"
-msgstr ""
+msgstr "Om %s"
 
 #: gtk/gtkaboutdialog.c:1876
 msgid "Credits"
-msgstr ""
+msgstr "Bidrag"
 
 #: gtk/gtkaboutdialog.c:1901
 msgid "Written by"
-msgstr ""
+msgstr "Skriven av"
 
 #: gtk/gtkaboutdialog.c:1904
 msgid "Documented by"
-msgstr ""
+msgstr "Dokmentert av"
 
 #: gtk/gtkaboutdialog.c:1916
 msgid "Translated by"
-msgstr ""
+msgstr "Omsett av"
 
 #: gtk/gtkaboutdialog.c:1920
 msgid "Artwork by"
-msgstr ""
+msgstr "Grafikk av"
 
 #. This is the text that should appear next to menu accelerators
 #. * that use the shift key. If the text on this key isn't typically
@@ -930,7 +916,7 @@ msgstr "calendar:week_start:1"
 #: gtk/gtkcellrendererprogress.c:235 gtk/gtkcellrendererprogress.c:293
 #, c-format
 msgid "progress bar label|%d %%"
-msgstr ""
+msgstr "%d %%"
 
 #: gtk/gtkcolorbutton.c:220 gtk/gtkcolorbutton.c:574
 msgid "Pick a Color"
@@ -1063,9 +1049,8 @@ msgid "_Palette"
 msgstr "_Palett"
 
 #: gtk/gtkcolorsel.c:2054
-#, fuzzy
 msgid "Color Wheel"
-msgstr "Hjul"
+msgstr "Fargehjul"
 
 #: gtk/gtkcolorseldialog.c:123
 msgid "Color Selection"
@@ -1090,9 +1075,8 @@ msgid "Invalid filename: %s"
 msgstr "Ugyldig filnamn: %s"
 
 #: gtk/gtkfilechooserbutton.c:65
-#, fuzzy
 msgid "Select A File"
-msgstr "Slett fil"
+msgstr "Vel ei fil"
 
 #: gtk/gtkfilechooserbutton.c:66 gtk/gtkfilechooserdefault.c:1229
 #: gtk/gtkpathbar.c:982
@@ -1105,82 +1089,68 @@ msgid "Desktop"
 msgstr "Skrivebord"
 
 #: gtk/gtkfilechooserbutton.c:68
-#, fuzzy
 msgid "(None)"
-msgstr "ingen"
+msgstr "(Ingen)"
 
 #: gtk/gtkfilechooserbutton.c:1515
 msgid "Other..."
-msgstr ""
+msgstr "Anna..."
 
 #: gtk/gtkfilechooserdefault.c:867
-#, fuzzy
 msgid "Could not retrieve information about the file"
-msgstr ""
-"Klarte ikkje å finna informasjon om %s:\n"
-"%s"
+msgstr "Klarte ikkje å finna informasjon om fila"
 
 #: gtk/gtkfilechooserdefault.c:878
-#, fuzzy
 msgid "Could not add a bookmark"
-msgstr ""
-"Klarte ikkje å leggja til bokmerke for %s:\n"
-"%s"
+msgstr "Klarte ikkje å leggja til bokmerke"
 
 #: gtk/gtkfilechooserdefault.c:889
-#, fuzzy
 msgid "Could not remove bookmark"
-msgstr ""
-"Klarte ikkje å fjerna bokmerke for %s:\n"
-"%s"
+msgstr "Klarte ikkje å fjerna bokmerke"
 
 #: gtk/gtkfilechooserdefault.c:900
 msgid "The folder could not be created"
-msgstr ""
+msgstr "Mappa kunne ikke lagas"
 
 #: gtk/gtkfilechooserdefault.c:911
-#, fuzzy
 msgid "Invalid file name"
-msgstr "Ugyldig filnamn: %s"
+msgstr "Ugyldig filnamn"
 
 #: gtk/gtkfilechooserdefault.c:921
 msgid "The folder contents could not be displayed"
-msgstr ""
+msgstr "Innhaldet i mappa kunne ikkje visast"
 
 #: gtk/gtkfilechooserdefault.c:1119
-#, fuzzy, c-format
+#, c-format
 msgid "Could not get information about '%s': %s"
-msgstr ""
-"Klarte ikkje å finna informasjon om %s:\n"
-"%s"
+msgstr "Klarte ikkje å finna informasjon om «%s»: %s"
 
 #: gtk/gtkfilechooserdefault.c:2095
 #, c-format
 msgid "Add the folder '%s' to the bookmarks"
-msgstr ""
+msgstr "Legg til mappa «%s» i bokmerker"
 
 #: gtk/gtkfilechooserdefault.c:2136
 msgid "Add the current folder to the bookmarks"
-msgstr ""
+msgstr "Legg til denne mappa i bokmerker"
 
 #: gtk/gtkfilechooserdefault.c:2138
 msgid "Add the selected folders to the bookmarks"
-msgstr ""
+msgstr "Legg til valgte mapper i bokmerker"
 
 #: gtk/gtkfilechooserdefault.c:2178
 #, c-format
 msgid "Remove the bookmark '%s'"
-msgstr ""
+msgstr "Fjern bokmerket «%s»"
 
 #: gtk/gtkfilechooserdefault.c:2591
-#, fuzzy, c-format
+#, c-format
 msgid "Could not add a bookmark for '%s' because it is an invalid path name."
-msgstr ""
-"Klarte ikkje å leggja til bokmerke for %s fordi det er eit ugyldig stinamn."
+msgstr "Klarte ikkje å leggja til bokmerke for «%s» fordi det er eit ugyldig stinamn."
 
 #: gtk/gtkfilechooserdefault.c:2769
 msgid "Shortcuts"
-msgstr ""
+msgstr "Snarveger"
 
 #: gtk/gtkfilechooserdefault.c:2823
 msgid "Folder"
@@ -1192,7 +1162,7 @@ msgstr "_Legg til"
 
 #: gtk/gtkfilechooserdefault.c:2882
 msgid "Add the selected folder to the bookmarks"
-msgstr ""
+msgstr "Legg til vald mappe i bokmerker"
 
 #: gtk/gtkfilechooserdefault.c:2887 gtk/gtkstock.c:352
 msgid "_Remove"
@@ -1200,20 +1170,19 @@ msgstr "Fje_rn"
 
 #: gtk/gtkfilechooserdefault.c:2894
 msgid "Remove the selected bookmark"
-msgstr ""
+msgstr "Fjern vald bokmerke"
 
 #: gtk/gtkfilechooserdefault.c:2997
 msgid "_Add to Shortcuts"
-msgstr ""
+msgstr "_Legg til i snarveger"
 
 #: gtk/gtkfilechooserdefault.c:3007
-#, fuzzy
 msgid "Open _Location"
-msgstr "Opna adresse"
+msgstr "Opna _adresse"
 
 #: gtk/gtkfilechooserdefault.c:3019
 msgid "Show _Hidden Files"
-msgstr ""
+msgstr "Vis _gøymde filer"
 
 #: gtk/gtkfilechooserdefault.c:3143 gtk/gtkfilesel.c:767
 msgid "Files"
@@ -1233,13 +1202,12 @@ msgstr "Endra"
 
 #: gtk/gtkfilechooserdefault.c:3244
 msgid "Select which types of files are shown"
-msgstr ""
+msgstr "Vel kva type filer som skal visast"
 
 #. Create Folder
 #: gtk/gtkfilechooserdefault.c:3280
-#, fuzzy
 msgid "Create Fo_lder"
-msgstr "Lag ny _mappe"
+msgstr "_Lag ny mappe"
 
 #. Name entry
 #: gtk/gtkfilechooserdefault.c:3398
@@ -1259,21 +1227,18 @@ msgid "Create in _folder:"
 msgstr "Lag i _mappe:"
 
 #: gtk/gtkfilechooserdefault.c:4523
-#, fuzzy
 msgid "Cannot change to folder because it is not local"
-msgstr "Kan ikkje gå til mappa. Ho er ikkje lokal"
+msgstr "Kan ikkje gå til mappa då ho ikkje er lokal"
 
 #: gtk/gtkfilechooserdefault.c:5048
-#, fuzzy, c-format
+#, c-format
 msgid "Shortcut %s does not exist"
-msgstr "snarvegen %s finst ikkje"
+msgstr "Snarvegen %s finst ikkje"
 
 #: gtk/gtkfilechooserdefault.c:5508
-#, fuzzy, c-format
+#, c-format
 msgid "Could not mount %s"
-msgstr ""
-"Kunne ikkje merka %s:\n"
-"%s"
+msgstr "Kunne ikkje montera %s"
 
 #: gtk/gtkfilechooserdefault.c:5802
 msgid "Type name of new folder"
@@ -1314,37 +1279,29 @@ msgid "Unknown"
 msgstr "Ukjent"
 
 #: gtk/gtkfilechooserdefault.c:5985
-#, fuzzy
 msgid "Cannot change folder"
-msgstr "Lag i _mappe:"
+msgstr "Kan ikkje gå til mappe"
 
 #: gtk/gtkfilechooserdefault.c:5986
-#, fuzzy
 msgid "The folder you specified is an invalid path."
-msgstr "Kan ikkje gå til den oppgjevne mappa. Stien er ugyldig."
+msgstr "Den oppgjevne mappa er ein ugyldig sti."
 
 #: gtk/gtkfilechooserdefault.c:6025
-#, fuzzy, c-format
+#, c-format
 msgid "Could not build file name from '%s' and '%s'"
-msgstr ""
-"Klarte ikkje å byggja eit filnamn av «%s» og «%s»:\n"
-"%s"
+msgstr "Klarte ikkje å byggja eit filnamn av «%s» og «%s»"
 
 #: gtk/gtkfilechooserdefault.c:6061
-#, fuzzy
 msgid "Could not select item"
-msgstr ""
-"Kunne ikkje merka %s:\n"
-"%s"
+msgstr "Kunne ikkje merka oppføring"
 
 #: gtk/gtkfilechooserdefault.c:6101
 msgid "Open Location"
 msgstr "Opna adresse"
 
 #: gtk/gtkfilechooserdefault.c:6108
-#, fuzzy
 msgid "Save in Location"
-msgstr "Opna adresse"
+msgstr "Lagre i adresse"
 
 #: gtk/gtkfilechooserdefault.c:6132
 msgid "_Location:"
@@ -1504,7 +1461,7 @@ msgid "_Selection: "
 msgstr "_Utval: "
 
 #: gtk/gtkfilesel.c:3152
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "The filename \"%s\" couldn't be converted to UTF-8. (try setting the "
 "environment variable G_FILENAME_ENCODING): %s"
@@ -1532,12 +1489,12 @@ msgstr "(Tom)"
 #: gtk/gtkfilesystemunix.c:415 gtk/gtkfilesystemunix.c:429
 #: gtk/gtkfilesystemunix.c:626 gtk/gtkfilesystemwin32.c:482
 #: gtk/gtkfilesystemwin32.c:495 gtk/gtkfilesystemwin32.c:1530
-#, fuzzy, c-format
+#, c-format
 msgid "Error getting information for '%s': %s"
-msgstr "Klarte ikkje å henta informasjon om «%s»: %s"
+msgstr "Feil ved henting av informasjon om «%s»: %s"
 
 #: gtk/gtkfilesystemunix.c:495 gtk/gtkfilesystemwin32.c:537
-#, fuzzy, c-format
+#, c-format
 msgid "Error creating directory '%s': %s"
 msgstr "Feil ved oppretting av katalogen «%s»: %s"
 
@@ -1560,26 +1517,28 @@ msgid ""
 "The name \"%s\" is not valid because it contains the character \"%s\". "
 "Please use a different name."
 msgstr ""
+"Namnet «%s» er ugyldeg fordi det inneheld teiknet «%s».\n"
+"Vennlegst bruk eit anna namn."
 
 #: gtk/gtkfilesystemunix.c:1443 gtk/gtkfilesystemwin32.c:1004
-#, fuzzy, c-format
+#, c-format
 msgid "Bookmark saving failed: %s"
-msgstr "Klarte ikkje lagra bokmerke (%s)"
+msgstr "Feil ved lagring av bokmerke: %s"
 
 #: gtk/gtkfilesystemunix.c:1495
 #, c-format
 msgid "'%s' already exists in the bookmarks list"
-msgstr ""
+msgstr "«%s» finst allereie i bokmerkelista"
 
 #: gtk/gtkfilesystemunix.c:1557
 #, c-format
 msgid "'%s' does not exist in the bookmarks list"
-msgstr ""
+msgstr "«%s» finst ikkje i bokmerkelista"
 
 #: gtk/gtkfilesystemunix.c:1739
-#, fuzzy, c-format
+#, c-format
 msgid "Error getting information for '%s'"
-msgstr "Klarte ikkje å henta informasjon om «%s»"
+msgstr "Feil ved henting av informasjon om «%s»"
 
 #: gtk/gtkfontbutton.c:178 gtk/gtkfontbutton.c:295
 msgid "Pick a Font"
@@ -1750,12 +1709,12 @@ msgstr ""
 #. Placeholder in --gtk-module=MODULES in --help output
 #: gtk/gtkmain.c:399
 msgid "MODULES"
-msgstr ""
+msgstr "MODULER"
 
 #. Description of --g-fatal-warnings in --help output
 #: gtk/gtkmain.c:401
 msgid "Make all warnings fatal"
-msgstr ""
+msgstr "Gjer alle advarslar fatale"
 
 #. Description of --gtk-debug=FLAGS in --help output
 #: gtk/gtkmain.c:404
@@ -1778,7 +1737,7 @@ msgstr "default:LTR"
 
 #: gtk/gtkmain.c:565
 msgid "GTK+ Options"
-msgstr ""
+msgstr "GTK+-flagg"
 
 #: gtk/gtkmain.c:565
 msgid "Show GTK+ Options"
@@ -1834,7 +1793,7 @@ msgstr "Spørsmål"
 #.
 #: gtk/gtkstock.c:294
 msgid "_About"
-msgstr ""
+msgstr "_Om"
 
 #: gtk/gtkstock.c:296
 msgid "_Apply"
@@ -1862,7 +1821,7 @@ msgstr "L_ukk"
 
 #: gtk/gtkstock.c:302
 msgid "_Convert"
-msgstr "_Konvertér"
+msgstr "_Konverter"
 
 #: gtk/gtkstock.c:303
 msgid "_Copy"
@@ -1882,7 +1841,7 @@ msgstr "_Køyr"
 
 #: gtk/gtkstock.c:307
 msgid "_Edit"
-msgstr ""
+msgstr "R_ediger"
 
 #: gtk/gtkstock.c:308
 msgid "_Find"
@@ -1977,32 +1936,28 @@ msgid "_Right"
 msgstr "Høg_re"
 
 #: gtk/gtkstock.c:332
-#, fuzzy
 msgid "_Next"
-msgstr "_Ny"
+msgstr "_Neste"
 
 #: gtk/gtkstock.c:333
-#, fuzzy
 msgid "P_ause"
-msgstr "_Lim inn"
+msgstr "P_ause"
 
 #: gtk/gtkstock.c:334
 msgid "_Play"
-msgstr ""
+msgstr "_Spel av"
 
 #: gtk/gtkstock.c:335
 msgid "Pre_vious"
-msgstr ""
+msgstr "Fo_rrige"
 
 #: gtk/gtkstock.c:336
-#, fuzzy
 msgid "_Record"
-msgstr "_Raud:"
+msgstr "_Ta opp"
 
 #: gtk/gtkstock.c:337
-#, fuzzy
 msgid "R_ewind"
-msgstr "_Finn"
+msgstr "_Spol tilbake"
 
 #: gtk/gtkstock.c:338 gtk/gtkstock.c:361
 msgid "_Stop"
@@ -2213,7 +2168,6 @@ msgstr "Kyrillisk (transliterert)"
 
 #. ID
 #: modules/input/iminuktitut.c:127
-#, fuzzy
 msgid "Inuktitut (Transliterated)"
 msgstr "Inuittisk (transliterert)"
 
@@ -2275,10 +2229,6 @@ msgstr "Klarte ikkje å henta informasjon om fila «%s»: %s"
 
 #~ msgid "This file system does not support icons for everything"
 #~ msgstr "Dette filsystemet støttar ikkje ikon til alt"
-
-#, fuzzy
-#~ msgid "Could not find the path"
-#~ msgstr "Kunne ikkje lagra resten"
 
 #~ msgid "Input Methods"
 #~ msgstr "Inndatametodar"
