--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2005-06-22  Matthias Clasen  <mclasen@redhat.com>
 
+	* gtk/gtkbutton.c (gtk_button_construct_child): Don't
+	trigger warnings if there are extra references to the
+	hbox.  (#308677, Dan Winship)
+
 	* gtk/gtkfilesystemunix.c: Ignore everything after the
 	first space in lines from the .gtk-bookmarks file.
 
