--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,23 @@
+2005-06-25  Matthias Clasen  <mclasen@redhat.com>
+
+	Add some new stock items.  (#166480, Kristof Vansant)
+	
+	* gtk/stock-icons/stock_fullscreen_16.png: 
+	* gtk/stock-icons/stock_fullscreen_24.png: 
+	* gtk/stock-icons/stock_leave_fullscreen_16.png: 
+	* gtk/stock-icons/stock_leave_fullscreen_24.png: 
+	* gtk/stock-icons/stock_info_16.png: 
+	* gtk/stock-icons/stock_info_24.png: New icons.
+
+	* gtk/stock-icons/Makefile.am: Add new icons.
+
+	* gtk/gtkstock.h: Define names for the new icons.
+
+	* gtk/gtkstock.c (builtin_items): Register new stock items.
+	
+	* gtk/gtkiconfactory.c (get_default_icons): Register new 
+	stock icons.
+
 2005-06-24  Owen Taylor  <otaylor@redhat.com>
 
 	* gdk/gdkrgb.c (gdk_rgb_select_conv): Fix up selection of
